adding client as a dependency
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@18598 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/pom.xml
+++ b/sip-servlets-examples/pom.xml
@@ -85,6 +85,12 @@
 			<version>1.6.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>		
+		<dependency>
+			<groupId>org.mobicents.servlet.sip</groupId>
+			<artifactId>sip-servlets-client</artifactId>
+			<version>1.6.0-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>	
 	</dependencies>	
 
 	<!-- repositories -->
