Update JBoss CI links in Mobicents documentation
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@19296 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/pom.xml
+++ b/sip-servlets-bootstrap/pom.xml
@@ -14,7 +14,7 @@
 	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<ciManagement>
 		<system>Hudson</system>
-		<url>https://hudson.jboss.org/hudson/job/MobicentsSipServlets/</url>
+		<url>https://ci.jboss.org/jenkins/job/MobicentsSipServlets/</url>
 	</ciManagement>
 	<developers>
 		<developer>
