--- a/mobicents-skin/pom.xml
+++ b/mobicents-skin/pom.xml
@@ -15,27 +15,19 @@
 	<name>Skin for generating Mobicents.org site</name>
 	<url>http://mobicents.org</url>
 	<repositories>
-		<repository>			
-			<id>JbossRepository</id>
-			<name>Jboss Repository</name>
-			<url>http://repository.jboss.org/maven2</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</repository>
 		<repository>
-			<id>jboss-snapshots</id>
-			<name>JBoss Snapshot Repository</name>
-			<url>http://snapshots.jboss.org/maven2</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
+		  <id>jboss-public-repository-group</id>
+		  <name>JBoss Public Maven Repository Group</name>
+		  <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+		  <layout>default</layout>
+		  <releases>
+		    <enabled>true</enabled>
+		    <updatePolicy>never</updatePolicy>
+		  </releases>
+		  <snapshots>
+		    <enabled>true</enabled>
+		    <updatePolicy>never</updatePolicy>
+		  </snapshots>
+		</repository>		
 	</repositories>
 </project>
