--- a/sip-servlets-test-suite/sipp-scenarios/clustering/lb-logging.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/clustering/lb-logging.properties
@@ -4,14 +4,14 @@ handlers = java.util.logging.ConsoleHandler, java.util.logging.FileHandler
 # Handler specific properties.
 # Describes specific configuration info for Handlers.
 ############################################################
-
+org.mobicents.level=ALL
 
 java.util.logging.ConsoleHandler.level=INFO
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 
-java.util.logging.FileHandler.level=FINEST
+java.util.logging.FileHandler.level=ALL
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
-java.util.logging.FileHandler.pattern=./load-balancer.log
+java.util.logging.FileHandler.pattern=./load-balancer-%u.log.txt
 
 #LEVELS
 #    * SEVERE (highest value)
