logging for SIP LB
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@19598 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/sipp-scenarios/clustering/lb-logging.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/clustering/lb-logging.properties
@@ -11,7 +11,7 @@ java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 
 java.util.logging.FileHandler.level=ALL
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
-java.util.logging.FileHandler.pattern=./load-balancer-%u.log.txt
+java.util.logging.FileHandler.pattern=./load-balancer-TEMPLATE.log.txt
 
 #LEVELS
 #    * SEVERE (highest value)
