--- a/sip-servlets-examples/simple-sip-servlet-distributable/pom.xml
+++ b/sip-servlets-examples/simple-sip-servlet-distributable/pom.xml
@@ -12,6 +12,16 @@
 	<version>1.6.0-SNAPSHOT</version>
 	<name>Distributable Simple Sip Servlet Example</name>
 	<url>http://www.mobicents.org/examples.html</url>
+	
+	<dependencies>
+		<dependency>
+			<groupId>org.mobicents.servlet.sip</groupId>
+			<artifactId>sip-servlets-client</artifactId>
+			<version>1.6.0-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -34,13 +44,7 @@
 	</build>
 
 	<!-- repositories -->
-	<repositories>
-		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
-			<layout>default</layout>
-		</repository>
+	<repositories>		
 		<repository>			
 			<id>JbossRepository</id>
 			<name>Jboss Repository</name>
