git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@19632 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -309,6 +309,11 @@
 		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/target/dependencies/snmp-adaptor/plugin">
 			<arg line="clean install -P set-svn-revision" />
 		</exec>	
+		<copy overwrite="true" verbose="true" todir="${mss.home}/client">
+		    <fileset dir="${base.path}/target/dependencies/snmp-adaptor/plugin/target">
+		      <include name="**/mibgen*.jar"/>
+		    </fileset>
+		</copy>
 		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/target/dependencies/snmp-adaptor">
 			<arg line="clean install -P set-svn-revision -Dmaven.test.skip=true -Djboss.home=${mss.home} -Dnode=${node}" />
 		</exec>			
