Fixes to doco to automatically be on the correct version
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@19648 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/docs/sources-mobicents/pom.xml
+++ b/docs/sources-mobicents/pom.xml
@@ -15,9 +15,10 @@
 		<platform.name>Mobicents</platform.name>
 		<short.platform.name>MSS</short.platform.name>
 		<cmd.platform.name>mss</cmd.platform.name>
+		<version>${project.version}</version>
 		<home.link>mobicents-all-1.2.1.GA-jboss-4.2.3.GA/jboss/</home.link>
-		<mss4j.release.zip>mss-1.3.1-jboss-jdk6-5.1.0.GA-1007051519.zip</mss4j.release.zip>
-		<mss4t.release.zip>mss-1.3.1-apache-tomcat-6.0.20-1007051527.zip</mss4t.release.zip>	
+		<mss4j.release.zip>mss-1.6.0.FINAL-jboss-jdk6-5.1.0.GA-1007051519.zip</mss4j.release.zip>
+		<mss4t.release.zip>mss-1.6.0.FINAL-apache-tomcat-6.0.20-1007051527.zip</mss4t.release.zip>	
 		<author.email.ivelin>ivelin.atanasoff.ivanov (at) gmail.com</author.email.ivelin>
 		<author.email.jean>jean.deruelle (at) gmail.com</author.email.jean>
 		<author.email.vlad>vladimir.ralev (at) gmail.com</author.email.vlad>
