overwriting the jdiameter-config.xml so that the event charging example shipped works out of the box
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@19650 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -326,7 +326,8 @@
 	<!-- Download dependencies from SourceForge -->
 	
 	<target name="build-mobicents-diameter-jboss-5" depends="get-mobicents-diameter-jboss-5">		
-		<unzip dest="${mss.home}/server/${jboss.config}/deploy/${diameter-jboss-5.name}" src="${diameter-jboss-5.distro.path}"/>			
+		<unzip dest="${mss.home}/server/${jboss.config}/deploy/${diameter-jboss-5.name}" src="${diameter-jboss-5.distro.path}"/>
+		<copy overwrite="true" file="${base.path}/jdiameter-config.xml" tofile="${mss.home}/server/${jboss.config}/deploy/${diameter-jboss-5.name}/config/jdiameter-config.xml" />
 	</target>
 	
 	<available file="${diameter-jboss-5.distro.path}" property="got.mobicents-diameter-jboss-5" />
