--- a/sip-servlets-test-suite/sipp-scenarios/performance/jboss-5-setup/mss-sip-stack-jboss.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/performance/jboss-5-setup/mss-sip-stack-jboss.properties
@@ -13,6 +13,9 @@ gov.nist.javax.sip.SEND_UDP_BUFFER_SIZE=65536
 gov.nist.javax.sip.CONGESTION_CONTROL_ENABLED=false
 gov.nist.javax.sip.AGGRESSIVE_CLEANUP=true
 gov.nist.javax.sip.MAX_FORK_TIME_SECONDS=0
+# prevent DOS attacks
+gov.nist.javax.sip.MAX_LISTENER_RESPONSE_TIME=120
+gov.nist.javax.sip.MAX_MESSAGE_SIZE=10000
 #no cache specified since in non ha mode we don't replicate
 org.mobicents.ha.javax.sip.cache.MobicentsSipCache.standalone=true
 org.mobicents.ha.javax.sip.CACHE_CLASS_NAME=org.mobicents.ha.javax.sip.cache.NoCache
