--- a/sip-servlets-test-suite/sipp-scenarios/performance/mss-sip-stack.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/performance/mss-sip-stack.properties
@@ -7,6 +7,9 @@ javax.sip.AUTOMATIC_DIALOG_SUPPORT=off
 gov.nist.javax.sip.DELIVER_UNSOLICITED_NOTIFY=true
 gov.nist.javax.sip.THREAD_POOL_SIZE=64
 gov.nist.javax.sip.REENTRANT_LISTENER=true
+# prevent DOS attacks
+gov.nist.javax.sip.MAX_LISTENER_RESPONSE_TIME=120
+gov.nist.javax.sip.MAX_MESSAGE_SIZE=10000
 # setting up the buffer size to reduce retransmissions and avoid loosing messages
 gov.nist.javax.sip.RECEIVE_UDP_BUFFER_SIZE=65536
 gov.nist.javax.sip.SEND_UDP_BUFFER_SIZE=65536
