--- a/sip-servlets-test-suite/sipp-scenarios/performance/tomcat-setup/mss-sip-stack.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/performance/tomcat-setup/mss-sip-stack.properties
@@ -9,6 +9,9 @@ gov.nist.javax.sip.THREAD_POOL_SIZE=64
 gov.nist.javax.sip.REENTRANT_LISTENER=true
 gov.nist.javax.sip.RECEIVE_UDP_BUFFER_SIZE=65536
 gov.nist.javax.sip.SEND_UDP_BUFFER_SIZE=65536
+# prevent DOS attacks
+gov.nist.javax.sip.MAX_LISTENER_RESPONSE_TIME=120
+gov.nist.javax.sip.MAX_MESSAGE_SIZE=10000
 gov.nist.javax.sip.AGGRESSIVE_CLEANUP=true
 gov.nist.javax.sip.MAX_FORK_TIME_SECONDS=0
 gov.nist.javax.sip.AUTOMATIC_DIALOG_ERROR_HANDLING=false
