--- a/sip-servlets-bootstrap/pom.xml
+++ b/sip-servlets-bootstrap/pom.xml
@@ -3,12 +3,12 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>1.6.0-SNAPSHOT</version>
+		<version>1.6.0.FINAL</version>
 		<relativePath>../pom.xml</relativePath>
     </parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-bootstrap-release</artifactId>
-	<version>1.6.0-SNAPSHOT</version>
+	<version>1.6.0.FINAL</version>
 	<packaging>pom</packaging>	
 	<name>Mobicents Sip Servlets Documentation and Release Scripts</name>
 	<url>http://www.mobicents.org/products_sip_servlets.html</url>
@@ -68,9 +68,9 @@
 		</license>
 	</licenses>
 	<scm>
-		<connection>scm:svn:http://mobicents.googlecode.com/svn/trunk/servers/sip-servlets</connection>
-		<developerConnection>scm:svn:https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets</developerConnection>
-		<url>http://code.google.com/p/mobicents/source/browse/trunk/servers/sip-servlets</url>
+		<connection>scm:svn:http://mobicents.googlecode.com/svn/tags/servers/sip-servlets/release-1.6.0.FINAL</connection>
+		<developerConnection>scm:svn:https://mobicents.googlecode.com/svn/tags/servers/sip-servlets/release-1.6.0.FINAL</developerConnection>
+		<url>http://code.google.com/p/mobicents/source/browse/tags/servers/sip-servlets/release-1.6.0.FINAL</url>
 	</scm>
 	<properties>
 		<!-- MOBICENTS TOOL VERSIONS -->
