--- a/sip-servlets-client/pom.xml
+++ b/sip-servlets-client/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>1.6.0-SNAPSHOT</version>
+		<version>1.6.0.FINAL</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>sip-servlets-client</artifactId>
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.6.0-SNAPSHOT</version>			
+			<version>1.6.0.FINAL</version>			
 		</dependency>
 		<!-- logging dependency -->
 		<dependency>
