--- a/sip-servlets-examples/presence-client-example/pom.xml
+++ b/sip-servlets-examples/presence-client-example/pom.xml
@@ -3,13 +3,13 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
-		<version>1.6.0-SNAPSHOT</version>
+		<version>1.6.0.FINAL</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>call-blocking-presence</artifactId>
 	<packaging>war</packaging>
-	<version>1.6.0-SNAPSHOT</version>
+	<version>1.6.0.FINAL</version>
 	<name>Call Blocking Presence Sip Servlet Example</name>
 	<url>http://www.mobicents.org/call_blocking.html</url>
 
