--- a/sip-servlets-examples/shopping-demo-jsr309/pom.xml
+++ b/sip-servlets-examples/shopping-demo-jsr309/pom.xml
@@ -3,13 +3,13 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
-		<version>1.6.0-SNAPSHOT</version>
+		<version>1.6.0.FINAL</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>shopping-demo-parent-jsr309</artifactId>
 	<packaging>pom</packaging>
-	<version>1.6.0-SNAPSHOT</version>
+	<version>1.6.0.FINAL</version>
 	<name>Shopping Demo Parent</name>
 	<url>http://www.mobicents.org/shopping-demo-jsr309.html</url>
 	<modules>
