--- a/sip-servlets-jboss5-deployer/pom.xml
+++ b/sip-servlets-jboss5-deployer/pom.xml
@@ -3,12 +3,12 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>1.6.0-SNAPSHOT</version>
+		<version>1.6.0.FINAL</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-jboss5-deployer</artifactId>
-	<version>1.6.0-SNAPSHOT</version>
+	<version>1.6.0.FINAL</version>
 	<packaging>jar</packaging>
 	<name>Sip Servlets JBoss 5 Deployer</name>
 	<url>http://www.mobicents.org/products_sip_servlets.html</url>
@@ -20,14 +20,14 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-jboss5-metadata</artifactId>
-			<version>1.6.0-SNAPSHOT</version>
+			<version>1.6.0.FINAL</version>
 			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.6.0-SNAPSHOT</version>
+			<version>1.6.0.FINAL</version>
 			<scope>provided</scope>
 		</dependency>											
 				
