[maven-release-plugin] prepare for next development iteration
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@19730 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/pure-jruby-telco/pom.xml
+++ b/sip-servlets-examples/pure-jruby-telco/pom.xml
@@ -5,14 +5,14 @@
 		</groupId>
 		<artifactId>sip-servlets-examples-parent
 		</artifactId>
-		<version>1.6.0.FINAL</version>
+		<version>1.7.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.example
 	</groupId>
 	<artifactId>pure-jruby-telco</artifactId>
 	<packaging>jar</packaging>
-	<version>1.6.0.FINAL</version>
+	<version>1.7.0-SNAPSHOT</version>
 	<name>JRuby Sip Servlet Demo Application</name>
 	<url>http://www.mobicents.org/mss-pure-jruby-telco.html
 	</url>
@@ -36,7 +36,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.6.0.FINAL</version>
+			<version>1.7.0-SNAPSHOT</version>
 		</dependency>	
 	</dependencies>
 
