--- a/sip-servlets-examples/shopping-demo-jsr309/web/pom.xml
+++ b/sip-servlets-examples/shopping-demo-jsr309/web/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>shopping-demo-parent-jsr309</artifactId>
-		<version>1.6.0.FINAL</version>
+		<version>1.7.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>shopping-demo-web-jsr309</artifactId>
 	<packaging>war</packaging>
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.example</groupId>
 			<artifactId>shopping-demo-business-jsr309</artifactId>
-			<version>1.6.0.FINAL</version>
+			<version>1.7.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -36,7 +36,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.6.0.FINAL</version>
+			<version>1.7.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- logging dependency -->
