--- a/sip-servlets-examples/simple-sip-servlet-distributable/pom.xml
+++ b/sip-servlets-examples/simple-sip-servlet-distributable/pom.xml
@@ -3,13 +3,13 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
-		<version>1.6.0.FINAL</version>
+		<version>1.7.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>simple-sip-servlet-distributable</artifactId>
 	<packaging>war</packaging>
-	<version>1.6.0.FINAL</version>
+	<version>1.7.0-SNAPSHOT</version>
 	<name>Distributable Simple Sip Servlet Example</name>
 	<url>http://www.mobicents.org/examples.html</url>
 	
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-client</artifactId>
-			<version>1.6.0.FINAL</version>
+			<version>1.7.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
