--- a/sip-servlets-test-suite/applications/refer-sip-servlet/pom.xml
+++ b/sip-servlets-test-suite/applications/refer-sip-servlet/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-test-suite-applications</artifactId>
-		<version>1.6.0.FINAL</version>
+		<version>1.7.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>refer-sip-servlet</artifactId>
 	<packaging>war</packaging>
