--- a/pom.xml
+++ b/pom.xml
@@ -83,10 +83,10 @@
 	
 	<properties>
 		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.FINAL</mobicents.tools.mavenplugin.eclipse.version>
-		<mobicents.cluster.version>1.11</mobicents.cluster.version>
-		<mobicents.balancer.version>1.4</mobicents.balancer.version>
-		<mobicents.jain.sip.ha.version>1.3.0</mobicents.jain.sip.ha.version>
-		<mobicents.jain.sip.ext.version>1.0</mobicents.jain.sip.ext.version>
+		<mobicents.cluster.version>1.12-SNAPSHOT</mobicents.cluster.version>
+		<mobicents.balancer.version>1.5-SNAPSHOT</mobicents.balancer.version>
+		<mobicents.jain.sip.ha.version>1.4.0-SNAPSHOT</mobicents.jain.sip.ha.version>
+		<mobicents.jain.sip.ext.version>1.1-SNAPSHOT</mobicents.jain.sip.ext.version>
 		<tomcat.version>6.0.32</tomcat.version>	
 	</properties>
 	
