--- a/sip-servlets-application-router/pom.xml
+++ b/sip-servlets-application-router/pom.xml
@@ -23,7 +23,7 @@
 		<!-- sip servlet impl dependency -->
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
-			<artifactId>sip-servlets-impl</artifactId>
+			<artifactId>sip-servlets-core-api</artifactId>
 			<version>1.7.0-SNAPSHOT</version>
 		</dependency>
 
