--- a/sip-servlets-core-api/.classpath
+++ b/sip-servlets-core-api/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/jain-sip"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/jain-sip-ext"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-jruby"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/mobicents-jain-sip-ha-core"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
